# hri_person_manager

./: CMakeLists.txt  package.xml
include/hri_person_manager/: managed_person.hpp  person_matcher.hpp
src/: hri_person_manager.cpp  person_matcher.cpp
src/hri_person_manager/: managed_person.cpp  person_matcher.cpp
test/: test_hri_person_manager.cpp
