<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_person_manager</name>
  <version>0.3.0</version>
  <description>Combines information about people's face, body, voice into on consistent representation, following the ROS4HRI conventions</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hri_person_manager</url> -->


  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hri</depend>
  <depend>tf2_ros</depend>
  <depend>hri_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
